src/test/deca/context/invalid/custom/if_int_bool.deca
// Description:
//   Declaration of an integer and a boolean, and test if both are equals or not.
// Results:
//    Line 12: Error, incompatible type.
//
// History:
//    created on 12/01/2022

{
   int i = 1;
   boolean b = true;
   if (i == b) {
        println("Error, incompatible type");
   } else {
        println("Error, incompatible type");
   }
}
